gitops/infra/services/banzaicloud/vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  annotations: 
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS

spec:
  ingressClassName: nginx
  rules:
  - host: vault.infra.matyshkinm.evrone.app
    http:
      paths:
      - path: /
        backend:
          service:
            name: vault
            port:
              name: api-port
        pathType: Prefix
  tls:
  - hosts:
    - vault.infra.matyshkinm.evrone.app
    secretName: matyshkin-com-vault-tls
